--- a/cps510/pubspec.yaml
+++ b/cps510/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  oracle: any
+  # oracle: any
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -34,7 +34,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  grinder: any
+  # grinder: any
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
